qal/ingress_qal.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressvote
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: qal.distributeur-de-pain.best
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: clustvoteapp
            port:
              number: 85
